# HaDoLibrary

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out
.github/workflows/: build.yml  valgrind.supp
HaDo/: ConvolutionalNeuralNetwork  DeepNeuralNetwork
HaDo/base/: ActivationFunctions.hpp  EndLayer.hpp  Layer.hpp
HaDo/errors/: CrossEntropyLoss.hpp  MeanSquaredError.hpp
HaDo/image/: LoadImage.hpp
HaDo/layers/: ActivationLayer.hpp  ConvolutionalLayer.hpp  DenseLayer.hpp  FlatteningLayer.hpp  MaxPoolLayer.hpp  SoftmaxLayer.hpp
HaDo/pipeline/: LayerVector.hpp  Pipeline.hpp  SequentialModel.hpp
HaDo/util/: TensorSerializer.hpp
eigen/: CMakeLists.txt
eigen/Eigen/src/Core/arch/AVX/: PacketMath.h  TypeCasting.h
eigen/Eigen/src/Core/arch/SSE/: PacketMath.h  TypeCasting.h
eigen/test/: CMakeLists.txt  indexed_view.cpp  packetmath.cpp  rand.cpp
eigen/unsupported/Eigen/src/AutoDiff/: AutoDiffScalar.h
eigen/unsupported/test/: cxx11_tensor_gpu.cu
include/: ActivationFunctions.hpp  ActivationLayer.hpp  ConvolutionalNeuralNetwork.hpp  DeepNeuralNetwork.hpp  DenseLayer.hpp  EndLayer.hpp  Layer.hpp  MeanSquaredError.hpp  init.hpp
include/base/: DeepNeuralNetwork.hpp  EndLayer.hpp  Layer.hpp
include/errors/: CrossEntropyLoss.hpp  MeanSquaredError.hpp
include/image/: LoadImage.hpp
include/layers/: ActivationLayer.hpp  ConvolutionalLayer.hpp  DenseLayer.hpp  FlatteningLayer.hpp  MaxPoolLayer.hpp  MeanSquaredError.hpp  SoftmaxLayer.hpp
include/pipeline/: LayerVector.hpp  Model.hpp  Pipeline.hpp  SequentialModel.hpp
include/util/: MatrixSerializer.hpp  TensorSerializer.hpp
src/: CMakeLists.txt  DoubleOut.cpp  TwoCategoryMNIST.cpp  XorModel.cpp  init.cpp  main.cpp
src/models/: matrix.json
test/: CMakeLists.txt
test/base/: test_activation_functions.cpp  test_base_layer.cpp  test_end_layer.cpp
test/examples/: example_convolutional_setup.cpp  example_test_case.cpp
test/layers/: test_activation_layer.cpp  test_convolutional_layer.cpp  test_dense_layer.cpp
